[package]
name = "shared-storage"
version = "0.1.0"
authors = ["Daniel Silverstone <dsilvers@digital-scurf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
fehler = "1"
tokio = { version="0.2", features=["fs", "sync"]}
serde = {version="1", features=["derive"]}
serde_json = "1"
bytes = "0.5"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio = { version="0.2", features=["macros"]}
tempfile = "3"